*SVN*

* Fixed the TMail#body method to look at the content-transfer-encoding header and unquote the body according to the rules it specifies #1265 [Jamis Buck]

* Added unquoting even if the iconv lib can't be loaded--in that case, only the charset conversion is skipped #1265 [Jamis Buck]

* Added automatic decoding of base64 bodies #1214 [Jamis Buck]

* Added that delivery errors are caught in a way so the mail is still returned whether the delivery was successful or not

* Fixed that email address like "Jamis Buck, M.D." <wild.medicine@example.net> would cause the quoter to generate emails resulting in "bad address" errors from the mail server #1220 [Jamis Buck]


*0.9.1* (20th April, 2005)

* Depend on Action Pack 1.8.1


*0.9.0* (19th April, 2005)

* Added that deliver_* will now return the email that was sent

* Added that quoting to UTF-8 only happens if the characters used are in that range #955 [Jamis Buck] 

* Fixed quoting for all address headers, not just to #955 [Jamis Buck]

* Fixed unquoting of emails that doesn't have an explicit charset #1036 [wolfgang@stufenlos.net]


*0.8.1* (27th March, 2005)

* Fixed that if charset was found that the end of a mime part declaration TMail would throw an error #919 [lon@speedymac.com]

* Fixed that TMail::Unquoter would fail to recognize quoting method if it was in lowercase #919 [lon@speedymac.com]

* Fixed that TMail::Encoder would fail when it attempts to parse e-mail addresses which are encoded using something other than the messages encoding method #919 [lon@speedymac.com]

* Added rescue for missing iconv library and throws warnings if subject/body is called on a TMail object without it instead


*0.8.0* (22th March, 2005)

* Added framework support for processing incoming emails with an Action Mailer class. See example in README.


*0.7.1* (7th March, 2005)

* Bind to newest Action Pack (1.5.1)


*0.7.0* (24th February, 2005)
