@@ -14,14 +14,15 @@ module TMail
       if multipart?
         parts.collect { |part| 
           if part.header["content-type"].main_type != "text"
-            content   = part.body.unpack("m")[0]
-            content   = part.body if content.blank?
-            file_name = part.header["content-type"].params["name"]
+            content   = part.body # unquoted automatically by TMail#body
+            file_name = part.header["content-type"].params["name"] ||
+                        part.header["content-disposition"].params["filename"]
             
             next if file_name.blank? || content.blank?
             
             attachment = Attachment.new(content)
-            attachment.original_filename = file_name.strip.dup
+            attachment.original_filename = file_name.strip
+            attachment.content_type = part.content_type
             attachment
           end
         }.compact
