@@ -1,0 +1,59 @@
+Return-Path: <xxx@xxxx.xxx>
+Received: from xxx.xxxx.xxx by xxx.xxxx.xxx with ESMTP id 6AAEE3B4D23 for <xxx@xxxx.xxx>; Sun, 8 May 2005 12:30:23 -0500
+Received: from xxx.xxxx.xxx by xxx.xxxx.xxx with ESMTP id j48HUC213279 for <xxx@xxxx.xxx>; Sun, 8 May 2005 12:30:13 -0500
+Received: from conversion-xxx.xxxx.xxx.net by xxx.xxxx.xxx id <0IG600901LQ64I@xxx.xxxx.xxx> for <xxx@xxxx.xxx>; Sun, 8 May 2005 12:30:12 -0500
+Received: from agw1 by xxx.xxxx.xxx with ESMTP id <0IG600JFYLYCAxxx@xxxx.xxx> for <xxx@xxxx.xxx>; Sun, 8 May 2005 12:30:12 -0500
+Date: Sun, 8 May 2005 12:30:08 -0500
+From: xxx@xxxx.xxx
+To: xxx@xxxx.xxx
+Message-Id: <7864245.1115573412626.JavaMxxx@xxxx.xxx>
+Subject: Filth
+Mime-Version: 1.0
+Content-Type: multipart/mixed; boundary=mimepart_427e4cb4ca329_133ae40413c81ef
+X-Mms-Priority: 1
+X-Mms-Transaction-Id: 3198421808-0
+X-Mms-Message-Type: 0
+X-Mms-Sender-Visibility: 1
+X-Mms-Read-Reply: 1
+X-Original-To: xxx@xxxx.xxx
+X-Mms-Message-Class: 0
+X-Mms-Delivery-Report: 0
+X-Mms-Mms-Version: 16
+Delivered-To: xxx@xxxx.xxx
+X-Nokia-Ag-Version: 2.0
+
+This is a multi-part message in MIME format.
+
+--mimepart_427e4cb4ca329_133ae40413c81ef
+Content-Type: multipart/mixed; boundary=mimepart_427e4cb4cbd97_133ae40413c8217
+
+
+
+--mimepart_427e4cb4cbd97_133ae40413c8217
+Content-Type: text/plain; charset=utf-8
+Content-Transfer-Encoding: 7bit
+Content-Disposition: inline
+Content-Location: text.txt
+
+Some text
+
+--mimepart_427e4cb4cbd97_133ae40413c8217--
+
+--mimepart_427e4cb4ca329_133ae40413c81ef
+Content-Type: text/plain; charset=us-ascii
+Content-Transfer-Encoding: 7bit
+
+
+--
+This Orange Multi Media Message was sent wirefree from an Orange
+MMS phone. If you would like to reply, please text or phone the
+sender directly by using the phone number listed in the sender's
+address. To learn more about Orange's Multi Media Messaging
+Service, find us on the Web at xxx.xxxx.xxx.uk/mms
+
+
+--mimepart_427e4cb4ca329_133ae40413c81ef
+
+
+--mimepart_427e4cb4ca329_133ae40413c81ef-
+
